# gigalphex

./: .gitignore  README.md  pyproject.toml
.gigalphex/: config
.gigalphex/prompts/: finalize.txt  make_plan.txt  plan_skill.txt  review.txt  review_agent.txt  review_synthesis.txt  task.txt
docs/: gigacode-approval-diagnostic-20260622.md  gigacode-verification-checklist.md  gigalphex-10min-presentation.html  how-to-try.html  how-to-try.md  python-rewrite.md  real-task-testing-guide.md
outputs/: gigalphex-overview-10min.pptx
python/gigalphex/: __init__.py  cli.py  config.py  dashboard.py  defaults.py  diagnose.py  executor.py  git.py  plan.py  planner.py  progress.py  prompts.py  review.py  runner.py  signals.py  skills.py  stats.py
python/gigalphex/assets/planning/: SKILL.md
python/gigalphex/assets/superpowers-to-gigalphex/: SKILL.md
scripts/: diagnose-gigacode.sh
tests/: test_cli.py  test_config.py  test_dashboard.py  test_diagnose.py  test_executor.py  test_git.py  test_plan.py  test_planner.py  test_progress.py  test_prompts.py  test_review.py  test_runner.py  test_signals.py  test_skills.py  test_stats.py
