[project]
name = "gigalphex"
version = "0.1.0"
description = "Python autonomous plan runner for GigaCode CLI"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
gigalphex = "gigalphex.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
gigalphex = ["assets/planning/SKILL.md"]
